<resources>
    <string name="app_name">Seiko Sport</string>

    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="hint">Email</string>
    <string name="contra">Contraseña</string>
    <string name="hint2">contraseña</string>
    <string name="Form">Formulario de contacto</string>
    <string name="hint3">      Ingrese su nombre</string>
    <string name="hint4">      Ingrese su correo electrónico</string>
    <string name="hint5">      Déjenos su mensaje</string>
    <string name="btn_enviar">Enviar</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>


    <string name="totalpagar">Total a pagar</string>
    <string name="resultadohint">Total</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_cancelar">Cancelar</string>


</resources>